[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
web-sys = { version = "0.3", features = ["console"] }
# also update `cargo install -f wasm-bindgen-cli  --version ` to the latest version
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_ecs_tilemap = "0.12.0"
